--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="dv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gaafu-magazine</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <!--app-head-->
+    <title>Gaafu Magazine</title>
+    <meta
+      name="description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
+    <meta name="author" content="Gaafu Magazine" />
+
+    <!-- Default OpenGraph tags -->
+    <meta property="og:title" content="Gaafu Magazine" />
+    <meta
+      property="og:description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gaafu.mv" />
+    <meta property="og:site_name" content="Gaafu Magazine" />
+    <meta property="og:locale" content="dv_MV" />
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gaafu Magazine" />
+    <meta
+      name="twitter:description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
