--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="dv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gaafu-magazine</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <base href="/" />
+    <!--app-head-->
+    <title>Gaafu Magazine</title>
+    <meta
+      name="description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
+    <meta name="author" content="Gaafu Magazine" />
+
+    <!-- Default OpenGraph tags -->
+    <meta property="og:title" content="Gaafu Magazine" />
+    <meta
+      property="og:description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://gaafu-magazine-test-eight.vercel.app"
+    />
+    <meta property="og:site_name" content="Gaafu Magazine" />
+    <meta property="og:locale" content="dv_MV" />
+    <meta
+      property="og:image"
+      content="https://gaafu-magazine-test-eight.vercel.app/og-image.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gaafu Magazine" />
+    <meta
+      name="twitter:description"
+      content="ދިވެހިރާއްޖޭގެ އެންމެ ފުރަތަމަ އޮންލައިން މަޖައްލާ"
+    />
+    <meta
+      name="twitter:image"
+      content="https://gaafu-magazine-test-eight.vercel.app/og-image.jpg"
+    />
+    <script>
+      // Register Service Worker
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("/sw.js")
+            .then((registration) => {
+              console.log("SW registered:", registration);
+            })
+            .catch((error) => {
+              console.log("SW registration failed:", error);
+            });
+        });
+      }
+    </script>
   </head>
 
   <body>
+    <noscript>
+      <div style="text-align: center; padding: 20px">
+        ވެބްސައިޓް ބެލުމަށް ޖާވާސްކްރިޕްޓް އެނެބަލް ކުރައްވާ
+      </div>
+    </noscript>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
