--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="dv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gaafu-magazine</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ގާފު މަޖައްލާ - Gaafu Magazine</title>
+    <meta
+      name="description"
+      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
+    />
+    <meta name="author" content="Gaafu Magazine" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gaafu.mv/" />
+    <meta property="og:title" content="ގާފު މަޖައްލާ - Gaafu Magazine" />
+    <meta
+      property="og:description"
+      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
+    />
     <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gaafu.mv/" />
+    <meta property="twitter:title" content="ގާފު މަޖައްލާ - Gaafu Magazine" />
+    <meta
+      property="twitter:description"
+      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
+    />
+    <meta property="twitter:image" content="/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
   <body>
