--- a/index.html
+++ b/index.html
@@ -3,31 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ގާފު މަޖައްލާ - Gaafu Magazine</title>
-    <meta
-      name="description"
-      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
-    />
-    <meta name="author" content="Gaafu Magazine" />
+    <title>Havaasa Media</title>
+    <meta name="description" content="Havaasa Media" />
+    <meta name="author" content="Havaasa Media" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gaafu.mv/" />
-    <meta property="og:title" content="ގާފު މަޖައްލާ - Gaafu Magazine" />
-    <meta
-      property="og:description"
-      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
-    />
+    <meta property="og:url" content="https://havaasa.com" />
+    <meta property="og:title" content="Havaasa Media" />
+    <meta property="og:description" content="Havaasa Media" />
     <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gaafu.mv/" />
-    <meta property="twitter:title" content="ގާފު މަޖައްލާ - Gaafu Magazine" />
-    <meta
-      property="twitter:description"
-      content="ގާފު އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
-    />
+    <meta property="twitter:url" content="https://havaasa.com" />
+    <meta property="twitter:title" content="Havaasa Media" />
+    <meta property="twitter:description" content="Havaasa Media" />
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- Favicon -->
