--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
     <meta property="twitter:image" content="/og-image.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/Logo/White.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Logo/White.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Logo/White.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Logo/White.svg" />
+    <link rel="mask-icon" href="/Logo/White.svg" color="#800000" />
+    <meta name="theme-color" content="#800000" />
   </head>
 
   <body>
