--- a/index.html
+++ b/index.html
@@ -13,16 +13,27 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://havaasa.com" />
-    <meta property="og:title" content="Havaasa Media" />
-    <meta property="og:description" content="Havaasa Media" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:title" content="ހަވާސާ މީޑިއާ - Havaasa Media" />
+    <meta
+      property="og:description"
+      content="ހަވާސާ މީޑިއާ އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
+    />
+    <meta property="og:image" content="https://havaasa.com/og-image.png" />
+    <meta
+      property="og:image:secure_url"
+      content="https://havaasa.com/og-image.png"
+    />
+    <meta property="og:site_name" content="ހަވާސާ މީޑިއާ" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://havaasa.com" />
-    <meta property="twitter:title" content="Havaasa Media" />
-    <meta property="twitter:description" content="Havaasa Media" />
-    <meta property="twitter:image" content="/og-image.png" />
+    <meta property="twitter:title" content="ހަވާސާ މީޑިއާ - Havaasa Media" />
+    <meta
+      property="twitter:description"
+      content="ހަވާސާ މީޑިއާ އަކީ ދިވެހި ބަހުން ހިންގާ ހަބަރާއި މަޢުލޫމާތު ފޯރުކޮށްދޭ ފަރާތެކެވެ"
+    />
+    <meta property="twitter:image" content="https://havaasa.com/og-image.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/Logo/White.svg" />
